# schedule-app

nextjs-frontend/: package.json
rust-backend/: Cargo.toml
rust-backend/prisma/: schema.prisma
rust-backend/src/: prisma.rs
