[workspace]
members = ["prisma-cli"]

[package]
name = "schedule-app"
version = "0.1.0"
edition = "2021"


[workspace.dependencies]
prisma-client-rust = { git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.6.11", default-features = false, features = [
  "postgresql",
  "migrations",
] }
prisma-client-rust-cli = { git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.6.11", default-features = false, features = [
  "postgresql",
  "migrations",
] }
serde = "1.0.197"
tokio = { version = "1.36.0", features = ["full"] }
axum = "0.7.4"
async-graphql = "7.0.2"
async-graphql-axum = "7.0.2"
